# inconsistency-measurement-LTL

./: CMakeLists.txt  README.md  main.cpp
data/: bpi_2016_75-12-5_12-5LTL.txt  bpi_2017_75_12-5_12-5LTL.txt  bpi_2018_75_12-5_12-5LTL.txt  bpi_2019_75_12-5_12-5LTL.txt  bpi_2020-1_75_12-5_12-5LTL.txt  bpi_2020-2_75_12-5_12-5LTL.txt  bpi_2020-3_75_12-5_12-5LTL.txt  bpi_2020-4_75_12-5_12-5LTL.txt  bpi_2020-5_75_12-5_12-5LTL.txt
data/LRS/: lrs_sig_10_15_25_0.ltl  lrs_sig_10_15_25_1.ltl  lrs_sig_10_15_25_10.ltl  lrs_sig_10_15_25_11.ltl  lrs_sig_10_15_25_12.ltl  lrs_sig_10_15_25_13.ltl  lrs_sig_10_15_25_14.ltl  lrs_sig_10_15_25_15.ltl  lrs_sig_10_15_25_16.ltl  lrs_sig_10_15_25_17.ltl  lrs_sig_10_15_25_18.ltl  lrs_sig_10_15_25_19.ltl  (+168 more)
declare_data/: bpi_2012_75_12-5_12-5.txt  bpi_2016_75-12-5_12-5.txt  bpi_2017_75_12-5_12-5.txt  bpi_2018_75_12-5_12-5.txt  bpi_2019_75_12-5_12-5.txt  bpi_2020-1_75_12-5_12-5.txt  bpi_2020-2_75_12-5_12-5.txt  bpi_2020-3_75_12-5_12-5.txt  bpi_2020-4_75_12-5_12-5.txt  bpi_2020-5_75_12-5_12-5.txt
src/: CMakeLists.txt  ComputeMCS.cpp  ComputeMCS.h  ComputeMIS.cpp  ComputeMIS.h  Constants.h  Formula.cpp  Formula.h  InconsistencyMeasureASP.cpp  InconsistencyMeasureASP.h  Kb.cpp  Kb.h  LTLConformanceChecking.cpp  LTLConformanceChecking.h  LTLMeasuresASP.cpp  LTLMeasuresASP.h  LTLSatisfiabilityCheck.cpp  LTLSatisfiabilityCheck.h  MCSBasedInconsistencyMeasures.cpp  MCSBasedInconsistencyMeasures.h  MISBasedInconsistencyMeasures.cpp  MISBasedInconsistencyMeasures.h  Makefile  Parser.cpp  Parser.h  Utils.cpp  Utils.h  clingo.hh  cmake_install.cmake
(+48 files in other folders)
